[gd_scene load_steps=5 format=4 uid="uid://bhw403dpsu1ua"]

[ext_resource type="Script" uid="uid://li0avxjwfrc3" path="res://scripts/game_manager.gd" id="1_w5aja"]
[ext_resource type="Texture2D" uid="uid://dl8ef83f1t13" path="res://sprites/world_tileset.png" id="2_onqr8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ycayy"]
texture = ExtResource("2_onqr8")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_bw6k5"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ycayy")

[node name="Game" type="Node2D"]
script = ExtResource("1_w5aja")

[node name="Node" type="Node" parent="."]
script = ExtResource("1_w5aja")

[node name="MultiplayerHud" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 70.0
offset_bottom = 47.0

[node name="Panel" type="Panel" parent="MultiplayerHud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerHud/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host" type="Button" parent="MultiplayerHud/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Host Game"

[node name="JoinAsPlayer2" type="Button" parent="MultiplayerHud/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Join as Player 2"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cxiv574ojbvis")
spawn_path = NodePath("../Players")
spawn_limit = 2

[node name="Players" type="Node2D" parent="."]
position = Vector2(494, 282)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 323)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAOABsAAAAAAAAAAAAPABsAAAAAAAAAAAAQABsAAAAAAAAAAAARABsAAAAAAAAAAAASABsAAAAAAAAAAAATABsAAAAAAAAAAAAUABsAAAAAAAAAAAAVABsAAAAAAAAAAAAWABsAAAAAAAAAAAAXABsAAAAAAAAAAAAYABsAAAAAAAAAAAAZABsAAAAAAAAAAAAaABsAAAAAAAAAAAAbABsAAAAAAAAAAAAcABsAAAAAAAAAAAAdABsAAAAAAAAAAAAeABsAAAAAAAAAAAAfABsAAAAAAAAAAAAgABsAAAAAAAAAAAAhABsAAAAAAAAAAAAiABsAAAAAAAAAAAAjABsAAAAAAAAAAAAkABsAAAAAAAAAAAAlABsAAAAAAAAAAAAmABsAAAAAAAEAAAAnABsAAAAAAAEAAAAoABsAAAAAAAEAAAApABsAAAAAAAEAAAAqABsAAAABAAEAAAArABsAAAABAAEAAAAsABsAAAABAAEAAAAtABsAAAABAAEAAAAuABsAAAABAAEAAAAvABsAAAABAAEAAAAwABsAAAABAAEAAAAxABsAAAABAAEAAAAyABsAAAABAAEAAAAqABoAAAAAAAEAAAArABoAAAABAAEAAAArABkAAAAAAAEAAAArABgAAAAAAAEAAAArABcAAAAAAAAAAAAsABcAAAAAAAAAAAAtABcAAAAAAAAAAAAuABcAAAAAAAAAAAAuABgAAAAAAAEAAAAvABgAAAAAAAAAAAAwABgAAAAAAAAAAAAxABgAAAAAAAAAAAAyABgAAAAAAAAAAAAzABgAAAAAAAAAAAAzABkAAAAAAAEAAAAzABoAAAABAAEAAAAzABsAAAABAAEAAAAyABkAAAAAAAEAAAAxABkAAAAAAAEAAAAwABkAAAAAAAEAAAAvABkAAAAAAAEAAAAuABkAAAAAAAEAAAAtABkAAAAAAAEAAAAsABkAAAAAAAEAAAAsABoAAAABAAEAAAAtABoAAAABAAEAAAAuABoAAAABAAEAAAAvABoAAAABAAEAAAAwABoAAAABAAEAAAAxABoAAAABAAEAAAAyABoAAAABAAEAAAAsABgAAAAAAAEAAAAtABgAAAAAAAEAAAAqABkAAAAAAAAAAAAmABoAAAAAAAAAAAAnABoAAAAAAAAAAAAoABoAAAAAAAAAAAApABoAAAAAAAAAAAAOABwAAAAAAAEAAAAPABwAAAAAAAEAAAAQABwAAAAAAAEAAAARABwAAAAAAAEAAAASABwAAAAAAAEAAAATABwAAAAAAAEAAAAUABwAAAAAAAEAAAAVABwAAAAAAAEAAAAWABwAAAAAAAEAAAAXABwAAAAAAAEAAAAYABwAAAAAAAEAAAAZABwAAAAAAAEAAAAaABwAAAAAAAEAAAAbABwAAAAAAAEAAAAbAB0AAAABAAAAAAAcAB0AAAABAAAAAAAdAB0AAAABAAAAAAAeAB0AAAABAAAAAAAfAB0AAAABAAAAAAAgAB0AAAABAAAAAAAfABwAAAAAAAEAAAAeABwAAAAAAAEAAAAdABwAAAAAAAEAAAAcABwAAAAAAAEAAAAgABwAAAAAAAEAAAAhABwAAAAAAAEAAAAiABwAAAAAAAEAAAAjABwAAAAAAAEAAAAkABwAAAAAAAEAAAAlABwAAAAAAAEAAAAOAB0AAAABAAAAAAAPAB0AAAABAAAAAAAQAB0AAAABAAAAAAARAB0AAAABAAAAAAASAB0AAAABAAAAAAATAB0AAAABAAAAAAAUAB0AAAABAAAAAAAVAB0AAAABAAAAAAAWAB0AAAABAAAAAAAXAB0AAAABAAAAAAAYAB0AAAABAAAAAAAZAB0AAAABAAAAAAAaAB0AAAABAAAAAAAhAB0AAAABAAAAAAAiAB0AAAABAAAAAAAjAB0AAAABAAAAAAAkAB0AAAABAAAAAAAlAB0AAAABAAAAAAAmAB0AAAABAAAAAAAnAB0AAAABAAAAAAAoAB0AAAABAAAAAAApAB0AAAABAAAAAAAqAB0AAAABAAAAAAArAB0AAAABAAAAAAAsAB0AAAABAAAAAAAtAB0AAAABAAAAAAAuAB0AAAABAAAAAAAvAB0AAAABAAAAAAAwAB0AAAABAAAAAAAxAB0AAAABAAAAAAAyAB0AAAABAAAAAAAyABwAAAABAAAAAAAzABwAAAABAAAAAAAzAB0AAAABAAAAAAAxABwAAAABAAAAAAAwABwAAAABAAAAAAAvABwAAAABAAAAAAAuABwAAAABAAAAAAAtABwAAAABAAAAAAAsABwAAAABAAAAAAArABwAAAABAAAAAAAqABwAAAABAAAAAAApABwAAAABAAAAAAAoABwAAAABAAAAAAAnABwAAAABAAAAAAAmABwAAAABAAAAAAAzAB4AAAABAAAAAAAyAB4AAAABAAAAAAAxAB4AAAABAAAAAAAwAB4AAAABAAAAAAAvAB4AAAABAAAAAAAuAB4AAAABAAAAAAAtAB4AAAABAAAAAAAsAB4AAAABAAAAAAArAB4AAAABAAAAAAAqAB4AAAABAAAAAAApAB4AAAABAAAAAAAoAB4AAAABAAAAAAAnAB4AAAABAAAAAAAmAB4AAAABAAAAAAAlAB4AAAABAAAAAAAkAB4AAAABAAAAAAAjAB4AAAABAAAAAAAiAB4AAAABAAAAAAAhAB4AAAABAAAAAAAgAB4AAAABAAAAAAAfAB4AAAABAAAAAAAeAB4AAAABAAAAAAAdAB4AAAABAAAAAAAcAB4AAAABAAAAAAAbAB4AAAABAAAAAAAaAB4AAAABAAAAAAAZAB4AAAABAAAAAAAYAB4AAAABAAAAAAAXAB4AAAABAAAAAAAWAB4AAAABAAAAAAAVAB4AAAABAAAAAAAUAB4AAAABAAAAAAATAB4AAAABAAAAAAASAB4AAAABAAAAAAARAB4AAAABAAAAAAAQAB4AAAABAAAAAAAPAB4AAAABAAAAAAAOAB4AAAABAAAAAAAOAB8AAAABAAAAAAAPAB8AAAABAAAAAAAQAB8AAAABAAAAAAARAB8AAAABAAAAAAASAB8AAAABAAAAAAATAB8AAAABAAAAAAAUAB8AAAABAAAAAAAVAB8AAAABAAAAAAAWAB8AAAABAAAAAAAXAB8AAAABAAAAAAAYAB8AAAABAAAAAAAZAB8AAAABAAAAAAAaAB8AAAABAAAAAAAbAB8AAAABAAAAAAAcAB8AAAABAAAAAAAdAB8AAAABAAAAAAAeAB8AAAABAAAAAAAfAB8AAAABAAAAAAAgAB8AAAABAAAAAAAhAB8AAAABAAAAAAAiAB8AAAABAAAAAAAjAB8AAAABAAAAAAAkAB8AAAABAAAAAAAlAB8AAAABAAAAAAAmAB8AAAABAAAAAAAnAB8AAAABAAAAAAAoAB8AAAABAAAAAAApAB8AAAABAAAAAAAqAB8AAAABAAAAAAArAB8AAAABAAAAAAAsAB8AAAABAAAAAAAtAB8AAAABAAAAAAAuAB8AAAABAAAAAAAvAB8AAAABAAAAAAAwAB8AAAABAAAAAAAxAB8AAAABAAAAAAAyAB8AAAABAAAAAAAzAB8AAAABAAAAAAA=")
tile_set = SubResource("TileSet_bw6k5")

[connection signal="pressed" from="MultiplayerHud/Panel/VBoxContainer/Host" to="Node" method="become_host"]
[connection signal="pressed" from="MultiplayerHud/Panel/VBoxContainer/JoinAsPlayer2" to="Node" method="join_as_player_2"]
